--- a/styles/sass/_cityGallery.scss
+++ b/styles/sass/_cityGallery.scss
@@ -8,27 +8,91 @@
 }
 
 .cityGallery {
-  @include center;
-
-  ul{
-    @include wrap;
-    justify-content: space-between;
+  padding: 40px 0;
+  h2 {
+    font-size: clamp(1.8rem, 3vw, 2.5rem);
+    padding: 20px 0;
+  }
 
     li {
       margin: 20px 0;
+      display: block;
+      width: 100%;
     }
+    
+    
 
     button {
-      width: 200px;
-      height: 200px;
+      height: 150px;
+      width: 100%;
+      color: white;
       position: relative;
+      display: block;
+      .overlay {
+        @include center;
+        justify-content: center;
+        position: absolute;
+        background-color: rgba(0,0,0,0.4);
+        width: 100%;
+        height: 150px;
+        top: 0; 
+      }
+      h2 {
+        font-size:clamp(1.8rem, 3vw, 2.5rem);
+      }
+    &[value] {
+      background-size: cover;
+      background-position: center;
     }
 
-    .number{
+    &[value="Beirut"] {
+      background-image: url('./assets/beirut.jpg');
+      background-position: center bottom;
+    }
+
+    &[value="New Orleans"] {
+       background-image: url('./assets/newOrleans.jpg');
+        background-position: center;
+    }
+
+    &[value="Kuala Lumpur"] {
+       background-image: url('./assets/kualaLumpur.jpg');
+       background-position: center bottom;
+    }
+
+    &[value="Rome"] {
+       background-image: url('./assets/rome.jpg');
+    }
+
+    &[value="Charleston"] {
+       background-image: url('./assets/charleston.jpg');
+    }
+
+    &[value="Singapore"] {
+       background-image: url('./assets/singapore.jpg');
+    }
+
+    &[value="Toronto"] {
+       background-image: url('./assets/toronto.jpg');
+       background-position: center;
+    }
+
+    &[value="New York City"] {
+       background-image: url('./assets/nyc.jpg');
+    }
+    
+    &[value="Bologna"] {
+       background-image: url('./assets/bologna.jpg');
+    }
+
+    &[value="Chicago"] {
+        background-image: url('./assets/chicago.jpg');
+    }
+
+    .number {
       position: absolute;
       top: -13%;
       left: -5%;
-
     }
   }
 }
