--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -14,5 +14,41 @@ header {
   span {
   display: block;
   }
+  background: linear-gradient(rgba(12,12,12,0.45)), url('./assets/hero.jpg'), ;
+  background-size: cover;
+  h1 {
+  font-size: clamp(2.8rem, 8vw, 8.5rem);
+  display: inline-block; 
+  color: #FFFFFF;
+  margin: 10px 0;
+    .underline {
+      color: white;
+      position: relative;
+      &::after {
+        content:'';
+          display: inline-block;
+          background: rgba(230, 86, 25, 0.4);
+          width: 38%;
+          height: 15%;
+          position: absolute;
+          bottom: 22%;
+          left: 30%;
+      }
+    }
+  }
+  p {
+    font-size: clamp(1.8rem, 3vw, 2.5rem);
+    color: white;
+  }
+  button {
+    display: inline-block;
+    border: 1px solid #EB7847;
+    padding: 1rem 2rem;
+    margin: 3rem 0;
+    text-decoration: none;
+    background-color: rgba(235, 120, 71,0.2);
+    font-size: clamp(1.8rem, 3vw, 2.5rem);
+    color: #ffffff;
+    text-align: center;
+  }
 }
-
