--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -1,6 +1,4 @@
 @media (max-width: 768px) {
-    
-    
     .restaurantList {
         li {
             display: flex;
@@ -8,10 +6,13 @@
             flex-direction: column;
         }
         h3 {
-            border-right: 0px;
+            border-right: 0;
             border-bottom: 1px solid #EB7847;
-            margin-right: 10px;
-            padding-right: 10px;
+            margin-right: 0;
+            padding-right: 0;
+        }
+        p {
+            padding: 10px 0;
         }
     }
 }
