--- a/styles/sass/_cityGallery.scss
+++ b/styles/sass/_cityGallery.scss
@@ -9,9 +9,17 @@
 
 .cityGallery {
   padding: 40px 0;
+
+  .cityGalleryHeader {
+    font-size:clamp(3.8rem, 5vw, 5.5rem);
+    text-transform: uppercase;
+    letter-spacing: 3px;
+  }
+
   h2 {
-    font-size: clamp(1.8rem, 3vw, 2.5rem);
+    font-size: clamp(1.8rem, 3vw, 3.5rem);
     padding: 20px 0;
+    color: whitesmoke;
   }
 
     li {
@@ -28,17 +36,20 @@
       color: white;
       position: relative;
       display: block;
+      
+      
       .overlay {
         @include center;
         justify-content: center;
         position: absolute;
-        background-color: rgba(0,0,0,0.4);
+        background-color: (rgba(78, 45, 32, 0.7));
         width: 100%;
         height: 150px;
         top: 0; 
       }
-      h2 {
-        font-size:clamp(1.8rem, 3vw, 2.5rem);
+
+      span {
+        font-weight: 400;
       }
     &[value] {
       background-size: cover;
@@ -81,8 +92,9 @@
        background-image: url('./assets/nyc.jpg');
     }
     
-    &[value="Bologna"] {
-       background-image: url('./assets/bologna.jpg');
+    &[value="Los Angeles"] {
+       background-image: url('./assets/losAngeles.jpg');
+       background-position: center;
     }
 
     &[value="Chicago"] {
