--- a/styles/sass/_restaurantList.scss
+++ b/styles/sass/_restaurantList.scss
@@ -1,10 +1,12 @@
 .cityRestaurants {
     padding: 40px 0;
-    h2{
-        font-size: clamp(1.8rem, 3vw, 2.5rem);
-        padding: 20px 0;
+    h2 {
+    font-size:clamp(3.8rem, 5vw, 5.5rem);
+    text-transform: uppercase;
+    letter-spacing: 3px;
     }
 }
+
 
 .restaurantList {
         display: flex;
@@ -16,7 +18,7 @@
         margin: 1rem 0;
         background-color: #E65619;
         border-radius: 5px;
-        color: white;
+        color: whitesmoke;
 
     }
     li {
@@ -27,5 +29,7 @@
         border-right: 1px solid #EB7847;
         margin-right: 10px;
         padding-right: 10px;
+        font-size: clamp(1.8rem, 3vw, 1.5rem);
+        letter-spacing: 1px;
     }
 }
