--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -5,6 +5,6 @@
 @import 'generalStyles';
 @import 'header';
 @import 'cityGallery';
-@import 'restaurantList';
-@import 'restaurantDetails';
+@import 'cityRestaurants';
+@import 'restaurant';
 @import 'mediaQueries';
