--- a/styles/sass/_cityGallery.scss
+++ b/styles/sass/_cityGallery.scss
@@ -10,47 +10,33 @@
 .cityGallery {
   padding: 40px 0;
 
-  .cityGalleryHeader {
-    font-size:clamp(3.8rem, 5vw, 5.5rem);
-    text-transform: uppercase;
-    letter-spacing: 3px;
+  li {
+    margin: 20px 0;
+    display: block;
+    width: 100%;
   }
 
-  h2 {
-    font-size: clamp(1.8rem, 3vw, 3.5rem);
-    padding: 20px 0;
-    color: whitesmoke;
-  }
+  button {
+    height: 150px;
+    width: 100%;
+    position: relative;
+    display: block;
+    transition: opacity 0.3s ease-in-out;
 
-    li {
-      margin: 20px 0;
-      display: block;
-      width: 100%;
+    &:hover,
+    &:focus {
+      opacity: 0.6;
     }
-    
-    
-
-    button {
-      height: 150px;
+      
+    .overlay {
+      @include center;
+      justify-content: center;
+      position: absolute;
       width: 100%;
-      color: white;
-      position: relative;
-      display: block;
-      
-      
-      .overlay {
-        @include center;
-        justify-content: center;
-        position: absolute;
-        background-color: (rgba(78, 45, 32, 0.7));
-        width: 100%;
-        height: 150px;
-        top: 0; 
-      }
+      height: 150px;
+      top: 0; 
+    }
 
-      span {
-        font-weight: 400;
-      }
     &[value] {
       background-size: cover;
       background-position: center;
@@ -99,12 +85,6 @@
 
     &[value="Chicago"] {
         background-image: url('./assets/chicago.jpg');
-    }
-
-    .number {
-      position: absolute;
-      top: -13%;
-      left: -5%;
     }
   }
 }
