--- a/styles/sass/_generalStyles.scss
+++ b/styles/sass/_generalStyles.scss
@@ -10,14 +10,25 @@ section {
   min-height: 100vh;
 }
 
-// ON CLICK, SHOW NEXT SECTION (BY SECTION)
-// section {
-//   display: none;
-// }
+section {
+  display: none;
+}
 
 button {
   cursor: pointer;
   border: none;
   padding: 0;
   margin: 0;
+}
+
+footer {
+  min-height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  a {
+    text-decoration: none;
+    border-bottom: 1px solid #EB7847;
+  }
 }
