--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -12,37 +12,34 @@
 header {
   @include center;
 
-  background: linear-gradient(rgba(12,12,12,0.45)), url('./assets/hero.jpg'), ;
+  background: linear-gradient(rgba(12,12,12,0.5)), url('./assets/hero.jpg'), ;
   background-size: cover;
-  span {
-    display: block;
-  }
+
   h1 {
-    font-size: clamp(2.8rem, 8vw, 8.5rem);
-    text-transform: uppercase;
-    letter-spacing: 2px;
     display: inline-block; 
     color: #FFFFFF;
     margin: 10px 0;
     .underline {
       color: white;
       position: relative;
+
       &::after {
         content:'';
-          display: inline-block;
-          background: rgba(230, 86, 25, 0.4);
-          width: 45%;
-          height: 15%;
-          position: absolute;
-          bottom: 25%;
-          left: 27%;
+        display: inline-block;
+        background: rgba(230, 86, 25, 0.4);
+        width: 45%;
+        height: 15%;
+        position: absolute;
+        bottom: 25%;
+        left: 27%;
       }
     }
   }
-  p {
-    font-size: clamp(1.8rem, 3vw, 2.5rem);
-    color: white;
+
+  span {
+    display: block;
   }
+
   button {
     display: inline-block;
     border: 1px solid #EB7847;
@@ -50,8 +47,14 @@ header {
     margin: 3rem 0;
     text-decoration: none;
     background-color: rgba(235, 120, 71,0.2);
-    font-size: clamp(1.8rem, 3vw, 2.5rem);
-    color: #ffffff;
     text-align: center;
+    transition: all 0.3s ease-in-out;
+
+    &:hover,
+    &:focus {
+      opacity: 0.8;
+      background-color: #E65619;
+      box-shadow: 2px 2px 2px #d2896a;
+    }
   }
 }
