--- a/styles/style.css
+++ b/styles/style.css
@@ -299,18 +299,107 @@ select {
 
 html {
   font-size: 62.5%;
-  font-family: "Nunito Sans";
-  background-color: #211a23;
-  color: whitesmoke;
-}
-
-.number {
-  font-family: "Nunito Sans";
-  font-size: clamp(1.8rem, 3vw, 2.5rem);
+  font-family: "Nunito Sans", sans-serif;
 }
 
 h1, h2, h3 {
-  font-family: "Halant";
+  font-family: "Halant", serif;
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: clamp(2.8rem, 6vw, 8.5rem);
+  letter-spacing: 2px;
+}
+
+h2, h3 {
+  letter-spacing: 3px;
+}
+
+h2 {
+  font-size: clamp(1.8rem, 3vw, 3.5rem);
+}
+
+.cityGalleryHeader {
+  font-size: clamp(2rem, 3vw, 3.5rem);
+}
+
+header p,
+header button {
+  font-size: clamp(1.8rem, 3vw, 2.5rem);
+}
+
+header p {
+  letter-spacing: 1px;
+}
+
+header button {
+  letter-spacing: 2px;
+}
+
+.cityRestaurants h3 {
+  font-size: clamp(1.8rem, 3vw, 2.5rem);
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+.anotherCity, .anotherResto {
+  font-size: clamp(1.8rem, 1vw, 3rem);
+  letter-spacing: 4px;
+  text-transform: uppercase;
+}
+
+.restaurantDetails h3 {
+  font-size: clamp(3.8rem, 5vw, 5.5rem);
+}
+
+.restaurantDetails p, .restaurantDetails a {
+  font-size: clamp(1.8rem, 3vw, 1.5rem);
+  letter-spacing: 4px;
+}
+
+footer {
+  font-size: clamp(1.8rem, 3vw, 1.5rem);
+  letter-spacing: 4px;
+}
+
+body {
+  background-color: #211a23;
+  color: #f7f5f5;
+}
+
+button {
+  color: #f7f5f5;
+}
+
+header p {
+  text-shadow: 0.1px 0.1px 2px #EB7847;
+}
+
+.overlay {
+  background-color: rgba(78, 45, 32, 0.7);
+}
+
+.restaurantList button {
+  background-color: #E65619;
+}
+
+.anotherCity, .anotherResto {
+  background-color: #211a23;
+}
+
+.restaurantDetails a,
+footer a {
+  color: #E65619;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.restaurantDetails a:hover, .restaurantDetails a:focus,
+footer a:hover,
+footer a:focus {
+  color: #EB7847;
+  text-shadow: 0.1px 0.1px 2px #ca4f30;
 }
 
 .wrapper {
@@ -324,11 +413,33 @@ section {
   min-height: 100vh;
 }
 
+section {
+  display: none;
+}
+
 button {
   cursor: pointer;
   border: none;
   padding: 0;
   margin: 0;
+}
+
+footer {
+  min-height: 5vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer a {
+  text-decoration: none;
+  border-bottom: 1px solid #EB7847;
 }
 
 header {
@@ -343,19 +454,12 @@ header {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(12, 12, 12, 0.45))), url("./assets/hero.jpg");
-  background: linear-gradient(rgba(12, 12, 12, 0.45)), url("./assets/hero.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(12, 12, 12, 0.5))), url("./assets/hero.jpg");
+  background: linear-gradient(rgba(12, 12, 12, 0.5)), url("./assets/hero.jpg");
   background-size: cover;
 }
 
-header span {
-  display: block;
-}
-
 header h1 {
-  font-size: clamp(2.8rem, 8vw, 8.5rem);
-  text-transform: uppercase;
-  letter-spacing: 2px;
   display: inline-block;
   color: #FFFFFF;
   margin: 10px 0;
@@ -377,9 +481,8 @@ header h1 .underline::after {
   left: 27%;
 }
 
-header p {
-  font-size: clamp(1.8rem, 3vw, 2.5rem);
-  color: white;
+header span {
+  display: block;
 }
 
 header button {
@@ -389,25 +492,20 @@ header button {
   margin: 3rem 0;
   text-decoration: none;
   background-color: rgba(235, 120, 71, 0.2);
-  font-size: clamp(1.8rem, 3vw, 2.5rem);
-  color: #ffffff;
   text-align: center;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+header button:hover, header button:focus {
+  opacity: 0.8;
+  background-color: #E65619;
+  -webkit-box-shadow: 2px 2px 2px #d2896a;
+          box-shadow: 2px 2px 2px #d2896a;
 }
 
 .cityGallery {
   padding: 40px 0;
-}
-
-.cityGallery .cityGalleryHeader {
-  font-size: clamp(3.8rem, 5vw, 5.5rem);
-  text-transform: uppercase;
-  letter-spacing: 3px;
-}
-
-.cityGallery h2 {
-  font-size: clamp(1.8rem, 3vw, 3.5rem);
-  padding: 20px 0;
-  color: whitesmoke;
 }
 
 .cityGallery li {
@@ -419,9 +517,14 @@ header button {
 .cityGallery button {
   height: 150px;
   width: 100%;
-  color: white;
   position: relative;
   display: block;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.cityGallery button:hover, .cityGallery button:focus {
+  opacity: 0.6;
 }
 
 .cityGallery button .overlay {
@@ -435,14 +538,9 @@ header button {
       -ms-flex-pack: center;
           justify-content: center;
   position: absolute;
-  background-color: rgba(78, 45, 32, 0.7);
   width: 100%;
   height: 150px;
   top: 0;
-}
-
-.cityGallery button span {
-  font-weight: 400;
 }
 
 .cityGallery button[value] {
@@ -495,23 +593,12 @@ header button {
   background-image: url("./assets/chicago.jpg");
 }
 
-.cityGallery button .number {
-  position: absolute;
-  top: -13%;
-  left: -5%;
-}
-
 .cityRestaurants {
   padding: 40px 0;
+  text-align: left;
 }
 
-.cityRestaurants h2 {
-  font-size: clamp(3.8rem, 5vw, 5.5rem);
-  text-transform: uppercase;
-  letter-spacing: 3px;
-}
-
-.restaurantList {
+.cityRestaurants .restaurantList {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -521,17 +608,22 @@ header button {
           flex-direction: column;
 }
 
-.restaurantList button {
+.cityRestaurants .restaurantList button {
+  text-align: left;
   display: block;
   width: 100%;
   padding: 1rem;
   margin: 1rem 0;
-  background-color: #E65619;
   border-radius: 5px;
-  color: whitesmoke;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
 }
 
-.restaurantList li {
+.cityRestaurants .restaurantList button:hover, .cityRestaurants .restaurantList button:focus {
+  opacity: 0.7;
+}
+
+.cityRestaurants .restaurantList li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -540,31 +632,79 @@ header button {
           align-items: center;
 }
 
-.restaurantList h3 {
+.cityRestaurants .restaurantList h3 {
   border-right: 1px solid #EB7847;
   margin-right: 10px;
   padding-right: 10px;
-  font-size: clamp(1.8rem, 3vw, 1.5rem);
-  letter-spacing: 1px;
 }
 
-.restaurantDetails {
-  border: 2px solid #E65619;
-  padding: 10px;
+.cityRestaurants .restaurantList p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.restaurantDetails h3 {
-  font-size: clamp(3.8rem, 5vw, 5.5rem);
-  text-transform: uppercase;
-  letter-spacing: 3px;
+.cityRestaurants .anotherCity {
+  display: none;
+  min-width: 30%;
+  height: 20px;
+  margin-top: 5px;
+  float: right;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.cityRestaurants .anotherCity:hover, .cityRestaurants .anotherCity:focus {
+  opacity: 0.7;
+  color: #d86f3e;
+  text-shadow: 0.1px 0.1px 2px #da4012;
+}
+
+.restaurant {
+  min-height: 95vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.restaurant .restaurantDetails {
+  padding: 30px;
+}
+
+.restaurant .restaurantDetails h3 {
   position: relative;
-  color: whitesmoke;
   border-bottom: 1px solid #EB7847;
 }
 
-.restaurantDetails p {
-  font-size: clamp(1.8rem, 3vw, 1.5rem);
+.restaurant .restaurantDetails p {
   margin: 10px 0px;
+}
+
+.restaurant .underline {
+  border-bottom: 1px solid #EB7847;
+  text-transform: uppercase;
+}
+
+.restaurant .anotherResto {
+  display: none;
+  min-width: 30%;
+  height: 20px;
+  margin-top: 5px;
+  float: right;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.restaurant .anotherResto:hover, .restaurant .anotherResto:focus {
+  opacity: 0.7;
+  color: #d86f3e;
+  text-shadow: 0.1px 0.1px 2px #da4012;
 }
 
 @media (max-width: 768px) {
@@ -588,5 +728,11 @@ header button {
   }
   .restaurantList p {
     padding: 10px 0;
+  }
+}
+
+@media (max-width: 400px) {
+  .cityGallery span {
+    display: inline-block;
   }
 }
