--- a/styles/sass/_cityRestaurants.scss
+++ b/styles/sass/_cityRestaurants.scss
@@ -45,7 +45,7 @@
 	.anotherCity {
 		display: none;
 		min-width: 30%;
-		height: 20px;
+		min-height: 20px;
 		margin-top: 5px;
 		float: right;
 		transition: all 0.3s ease-in-out;
