--- a/styles/sass/_restaurant.scss
+++ b/styles/sass/_restaurant.scss
@@ -24,7 +24,7 @@
 	.anotherResto {
 		display: none;
 		min-width: 30%;
-		height: 20px;
+		min-height: 20px;
 		margin-top: 5px;
 		float: right;
 		transition: all 0.3s ease-in-out;
